src: tags.yaml: correct "exclusiveMaximum" to be a boolean
RFC draft "JSON Schema Validation" says "exclusiveMaximum" must be a
boolean.  This bug was reported by Asgeir Oldernes Mortensen.

--- a/src/tags.yaml
+++ b/src/tags.yaml
@@ -835,7 +835,8 @@
 - name: /config/display/orientation
   x-schema:
     minimum: 0
-    exclusiveMaximum: 360
+    maximum: 360
+    exclusiveMaximum: true
     example: 90
   description: |
     The angle in degrees by which the orientation of the display
